--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.24'
-      
+
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
@@ -24,27 +24,30 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      
+
       - name: Download dependencies
         run: go mod download
-      
+
       - name: Run tests
         run: go test -v -coverprofile=coverage.out ./...
-      
+
       - name: Upload coverage
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.out
           fail_ci_if_error: false
-      
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
-      
+
+      - name: Process WebUI Assets
+        run: make process-assets
+
       - name: Build Linux
         run: make build-linux
-      
+
       - name: Build Windows
         run: make build-windows
 
