fix(build): allow webui/build scripts in gitignore
- Add exception for webui/build/ directory
- Build scripts (process-assets.go, size-check.sh) should be committed

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ Thumbs.db
 # Build artifacts
 dist/
 build/
+# Exception: webui/build contains build scripts that should be committed
+!webui/build/
 
 # Logs
 *.log
