feat(cssoptions): add launch Canvus with CSS config and fix path escaping
- Replace desktop shortcut creation with direct Canvus launch button
- Add auto-detection of Canvus executable in common Windows locations
- Generate CSS files based on enabled options with unique filenames
- Fix plugin-folders path escaping (backslashes to forward slashes for INI compatibility)
- Launch Canvus with --css argument using generated CSS file
- Add version info support for Windows builds (versioninfo.json)
- Fix dialog.Hide() calls in screenxml cell editor
- Add shortcut package for Windows desktop shortcut creation (unused, kept for future)

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ build/
 # Exception: webui/build contains build scripts that should be committed
 !webui/build/
 
+# Windows version info resource files
+*.syso
+resource.syso
+
 # Logs
 *.log
 
